<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#E6DCDC"
    android:padding="60dp"
    >


    <EditText
        android:id="@+id/titleEt"
        android:layout_margin="0dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="Title"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/descriptionEt"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:inputType="textMultiLine|textCapSentences"
        android:hint="Description"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleEt"
        android:minHeight="250dp"
        android:gravity="start"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/black"
        android:text="Save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEt" />

</androidx.constraintlayout.widget.ConstraintLayout>